# FishRead

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: keybindings.md
docs/adr/: 0001-cli-json-protocol-boundary.md  0002-boss-key-controls-fishread-ui-surfaces.md  0003-chapter-list-navigation-mode.md  0004-import-warnings-focus-on-readable-content.md
docs/agents/: domain.md  issue-tracker.md
fixtures/epub/: multi-chapter.epub  no-author.epub  simple.epub
migrations/: 0001_init.sql
rust/: Cargo.toml
rust/fishread-cli/: Cargo.toml
rust/fishread-cli/src/: main.rs
rust/fishread-cli/src/commands/: book.rs  chapter.rs  import.rs  init.rs  migrate.rs  mod.rs  read.rs
rust/fishread-cli/tests/: cli_smoke.rs
rust/fishread-core/: Cargo.toml
rust/fishread-core/src/: error.rs  lib.rs
rust/fishread-core/src/book/: mod.rs  model.rs  service.rs
rust/fishread-core/src/chapter/: mod.rs  model.rs  service.rs
rust/fishread-core/src/epub/: mod.rs  normalize.rs  package.rs  text.rs
rust/fishread-core/src/importer/: epub.rs  mod.rs  model.rs  service.rs
rust/fishread-core/src/protocol/: dto.rs  mod.rs
rust/fishread-core/src/reader/: chunk.rs  mod.rs  service.rs
rust/fishread-core/src/settings/: mod.rs
rust/fishread-core/src/storage/: book_repo.rs  chapter_repo.rs  db.rs  import_repo.rs  migrations.rs  mod.rs  rows.rs  settings_repo.rs
samples/: SOURCE.md  水浒传.epub
scripts/: smoke-cli.js
