[package]
name = "fishread-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fishread"
path = "src/main.rs"

[dependencies]
fishread-core = { path = "../fishread-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
