[package]
name = "fishread-cli"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "fishread"
path = "src/main.rs"

[dependencies]
fishread-core = { path = "../fishread-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
