[package]
name = "fishread-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
zip = "2"
roxmltree = "0.20"
scraper = "0.22"

[dev-dependencies]
tempfile = "3"
